# c00ltubee

./: .gitignore  CHANGELOG.md  README.md  TODO.md  build.py  c00ltubee-linux.spec  c00ltubee-windows.spec  c00ltubee.py  download-vendor.py  index.html  justfile  main.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vendor.py  vendor.sh  vite.config.js  vite.config.ts
backend/: api.py  app.py  config.py  downloader.py  log.py  util.py  windowhandler.py
database/: connector.py  download_history.py  handler.py  init.py  setting.py
database/sql/: data.sql  download_history.sql  schema.sql  setting.sql
docs/: index.html  style.css
frontend/: index.html  main.js  style.css
frontend/css/: base.css  style.css
frontend/css/components/: base.css  content.css  dialog.css  folder-picker.css  header.css  main.css  progress-bar.css  sidebar.css  style.css
frontend/css/themes/: bluddud.css  pr3typriincess.css
frontend/js/: api.js  backend.js  main.js  sse.js  support.js
frontend/js/components/: addUrls.js  checkbox.js  dialog.js  downloadCard.js  downloadList.js  dropdownMenu.js  folderPicker.js  history.js  (+5 more)
main/: config.js  events.js  index.js  yt-dlp.js
preload/: preload.js
renderer/: index.html
renderer/css/: style.css
renderer/js/: backend.js  main.js  util.js
src/: api.py  app.py  main.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/backend/: config.py  downloader.py
src/css/: style.css
src/ui/: index.html  main.js  mainwindow.ui  style.css
util/: util.py
(+17 files in other folders)
