[project]
name = "c00ltubee"
version = "0.1.0"
description = "A Youtube video downloader with c00lgui appearance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottle>=0.13.4",
    "pywebview>=6.2.1",
    "requests>=2.34.2",
    "tqdm>=4.67.3",
    "yt-dlp[default]>=2026.3.17",
]
